한글 인코딩 이슈로 init.sql 파일 신규 생성 및 적용. (docker-compose.yaml 과 init.sql 파일의 변동이 있었음.)
 #19

--- a/app/static/resume_html/minwoo.html
+++ b/app/static/resume_html/minwoo.html
@@ -28,9 +28,9 @@
                     <h2 class="h4 border-bottom pb-2">개인 정보</h2>
                     <ul class="list-unstyled">
                         <li><strong>이름:</strong> 양민우</li>
-                        <li><strong>생년월일:</strong> 1996년 07월 11일</li>
-                        <li><strong>주소:</strong> 수원시 권선구 곡반정동</li>
-                        <li><strong>연락처:</strong> 010-7289-5930</li>
+                        <li><strong>생년월일:</strong> 1996년 07월 </li>
+                        <li><strong>주소:</strong> 수원시 권선구 </li>
+                        <li><strong>연락처:</strong> 010-7000-5000</li>
                     </ul>
                 </section>
               
